[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airmix"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "kohkikita", email = "130106015+kohkikita@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/kohkikita/airmix#readme"
Issues = "https://github.com/kohkikita/airmix/issues"
Source = "https://github.com/kohkikita/airmix"

[tool.hatch.version]
path = "src/airmix/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/airmix tests}"

[tool.coverage.run]
source_pkgs = ["airmix", "tests"]
branch = true
parallel = true
omit = [
  "src/airmix/__about__.py",
]

[tool.coverage.paths]
airmix = ["src/airmix", "*/airmix/src/airmix"]
tests = ["tests", "*/airmix/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
